--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,46 @@
-sudo: false
+env:
+  global:
+    - CC_TEST_REPORTER_ID=787a2f89b15c637323c7340d65ec17e898ac44480706b4b4122ea040c2a88f1d
 language: node_js
 node_js:
+  - 9
   - 8
-addons:
-  chrome: stable
-before_install:
-  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.2.1
-  - export PATH="$HOME/.yarn/bin:$PATH"
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
+
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+
+script:
+  - yarn install
+  - yarn run lint
+  - yarn run test.with.coverage
+  - yarn run build
+
+after_success:
+  - yarn run coverage.codecov
+  - ./cc-test-reporter after-build --coverage-input-type lcov --exit-code $TRAVIS_TEST_RESULT
+
+cache:
+  yarn: true
+
+
+before_deploy:
+  - npm pack
+  - yarn run build
+
+deploy:
+  - provider: npm
+    email: "romanov@noldor.pro"
+    api_key: $NPM_API_KEY
+    tag: $TRAVIS_TAG
+    skip_cleanup: true
+    on:
+      repo: https://github.com/friends-of-js/include-import-loader
+      tags: true
+  - provider: releases
+    api_key: $GITHUB_API_KEY
+    file: "friends-of-js-include-import-loader-${TRAVIS_TAG}.tgz"
+    skip_cleanup: true
+    on:
+      tags: true
